--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons8-lion-head-32.png">
 </head>
 
 <body>
@@ -121,5 +122,6 @@
 
         <script type="module" src="scripts/app.js"></script>
 </body>
+
 
 </html>
