--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons8-lion-head-32.png">
 </head>
 
 <body>
@@ -80,5 +81,6 @@
     </footer>
 
 </body>
+
 
 </html>
